<resources>
    <string name="app_name">App Liga Nacional</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="acerca_de">Acerca de</string>
    <string name="Jornadas">Jornadas</string>
    <string name="Clasificacion">Clasificacion</string>
    <string name="Equipos">Equipos</string>
    <string name="communicate">Communicate</string>
    <string name="Comprar_Boletos">Comprar Boletos</string>
    <string name="App_Liga_Nacional">app liga</string>
    <string name="App_liga_nacional">App Liga Naciona</string>
    <string name="comentario">Aplicacion de la mejor liga centroamericana con todos los resultados, noticies y muchas cosas mas.</string>
    <string name="warn">SUSPENDIDA POR CRISIS DEL COVID-19</string>
    <string name="Inf">Seleccione el partido y la localidad que desee asistir.</string>
    <string name="partido">Partido</string>
    <string name="liga">Liga</string>
    <string name="Inf2">Selecione el numero de adultos y de niños que asistiran al evento.</string>
    <string name="Inf3">*No se permiten mas de 6 personas en cada grupo.</string>
    <string name="niños">Cant. de niños (Menores de 12 años)</string>
    <string name="adultos">Cant. de adultos (Mayores de 13 años)</string>
    <string name="listo">Listo para pagar</string>
    <string name="CLASI1">CLASIFICACION</string>
    <string name="Inf4">Por favor, escriba los datos de su numero de tarjeta de credito o debito.</string>
    <string name="Inf5">Por favor, escriba su correo electronico.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app">Liga Nacional</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese su nombre de usuario</string>
    <string name="ingrese_su_contraseña">Ingrese su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="title_activity_maps">Map</string>
    <string name="Su_nombre_y_su_apellido">Ingrese su Nombre y Apellido</string>
    <string name="olivido_su_contrase_a">Olivido su contraseña</string>
    <string name="forgotPassword">forgotPassword</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="warn">warn</string>
    <string name="CLASI1">clasi1</string>
    <string name="Susp">Suspendida por crisis de COVID-19</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="csd_municipal">CSD MUNICIPAL</string>
    <string name="guastatoya">GUASTATOYA</string>
    <string name="malacateco">MALACATECO</string>
    <string name="equipos">EQUIPOS</string>
    <string name="coban_imperial">COBAN IMPERIAL</string>
    <string name="comunicaciones">COMUNICACIONES</string>
    <string name="Sanarate">Sanarate</string>
    <string name="Iztapa">Iztapa</string>
    <string name="Santa_Lucia">Santa Lucia</string>
    <string name="Siquinala">Siquinala</string>
    <string name="Mixco">Mixco</string>
    <string name="csd_xelaju">CSD XELAJU</string>
    <string name="antigua_gfc">ANTIGUA GFC</string>
</resources>
