<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/equipos"
            android:title="@string/Equipos" />
        <item
            android:id="@+id/nav_all_questions"
            android:icon="@drawable/clasificacion"
            android:title="@string/Clasificacion" />
        <item
            android:id=""
            android:icon="@drawable/jornada"
            android:title="@string/Jornadas" />
        <item
            android:id=""
            android:icon="@drawable/boletos"
            android:title="@string/Comprar_Boletos" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/acerca_de" />
        </menu>
    </item>

</menu>
