<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".Login">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:src="@drawable/liga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:hint="@string/ingrese_su_nombre_de_usuario"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:hint="@string/ingrese_su_contraseña"
        android:inputType="textPassword"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/buttonIngr"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo1"
        android:fontFamily="monospace"
        android:text="@string/ingresar"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/buttonRegis"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo1"
        android:fontFamily="monospace"
        android:text="@string/registrarse"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngr" />
</androidx.constraintlayout.widget.ConstraintLayout>