<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appliganacional.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appliganacional.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appliganacional.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/equipos"
        android:name="com.example.appliganacional.Equipos"
        android:label="fragment_equipos"
        tools:layout="@layout/fragment_equipos" />
    <fragment
        android:id="@+id/comprar_Boletos"
        android:name="com.example.appliganacional.Comprar_Boletos"
        android:label="fragment_comprar__boletos"
        tools:layout="@layout/fragment_comprar__boletos" >
        <action
            android:id="@+id/action_comprar_Boletos_to_pagoFragment"
            app:destination="@id/pagoFragment" />
    </fragment>
    <fragment
        android:id="@+id/clasificacion"
        android:name="com.example.appliganacional.Clasificacion"
        android:label="fragment_clasificacion"
        tools:layout="@layout/fragment_clasificacion" >
        <action
            android:id="@+id/action_clasificacion_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/jornada"
        android:name="com.example.appliganacional.Jornada"
        android:label="fragment_jornada"
        tools:layout="@layout/fragment_jornada" />
    <fragment
        android:id="@+id/pagoFragment"
        android:name="com.example.appliganacional.ui.home.PagoFragment"
        android:label="fragment_pago"
        tools:layout="@layout/fragment_pago" />
</navigation>