<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/comprar_Boletos"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Comprar_Boletos">


<<<<<<< HEAD
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="73dp"
                android:layout_height="61dp"
                android:layout_marginStart="148dp"
                android:layout_marginLeft="148dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="170dp"
                android:layout_marginRight="170dp"
                android:src="@drawable/liga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:background="@color/negro"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/Comprar_Boletos"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="313dp"
                android:layout_height="59dp"
                android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="15dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/Inf"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="81dp"
                android:layout_height="23dp"
                android:layout_marginStart="156dp"
                android:layout_marginLeft="156dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/partido" />

            <Spinner
                android:id="@+id/lista_partidos"
                android:layout_width="389dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="81dp"
                android:layout_height="23dp"
                android:layout_marginStart="156dp"
                android:layout_marginLeft="156dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/liga" />

            <Spinner
                android:id="@+id/lista_ligas"
                android:layout_width="389dp"
                android:layout_height="28dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="250dp"
                android:layout_height="28dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/Inf2"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/total_ninos"
                android:layout_width="81dp"
                android:layout_height="23dp"
                android:layout_marginStart="312dp"
                android:layout_marginLeft="312dp"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="0" />

            <Button
                android:id="@+id/restar_kids"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="248dp"
                android:layout_marginLeft="248dp"
                android:layout_marginTop="-20dp"
                android:background="@android:drawable/screen_background_dark"
                android:gravity="center"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <Button
                android:id="@+id/sumar_kids"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="280dp"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="-23dp"
                android:background="@android:drawable/screen_background_dark"
                android:gravity="center"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="220dp"
                android:layout_height="12dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-20dp"
                android:fontFamily="monospace"
                android:text="@string/niños"
                android:textSize="10sp" />

            <Button
                android:id="@+id/sumar_adults"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="280dp"
                android:layout_marginLeft="280dp"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/screen_background_dark"
                android:gravity="center"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <Button
                android:id="@+id/restar_adults"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="248dp"
                android:layout_marginLeft="248dp"
                android:layout_marginTop="-22dp"
                android:background="@android:drawable/screen_background_dark"
                android:gravity="center"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/total_adultos"
                android:layout_width="81dp"
                android:layout_height="23dp"
                android:layout_marginStart="312dp"
                android:layout_marginLeft="312dp"
                android:layout_marginTop="-25dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="0" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="230dp"
                android:layout_height="14dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-20dp"
                android:fontFamily="monospace"
                android:text="@string/adultos"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="81dp"
                android:layout_height="23dp"
                android:layout_marginStart="164dp"
                android:layout_marginLeft="164dp"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="Total: Q" />

            <TextView
                android:id="@+id/inf3"
                android:layout_width="383dp"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/Inf3"
                android:textColor="#DC2E2E"
                android:textSize="10sp" />

            <Button
                android:id="@+id/pagar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="136dp"
                android:layout_marginLeft="136dp"
                android:layout_marginTop="30dp"
                android:background="#000000"
                android:fontFamily="monospace"
                android:text="@string/listo"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
=======
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="73dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/liga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="404dp"
        android:layout_height="63dp"
        android:layout_marginTop="72dp"
        android:src="@android:drawable/screen_background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="259dp"
        android:layout_height="0dp"
        android:layout_marginTop="88dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Comprar_Boletos"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/lista_partidos"
        android:layout_width="389dp"
        android:layout_height="28dp"
        android:layout_marginTop="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/lista_ligas"
        android:layout_width="389dp"
        android:layout_height="28dp"
        android:layout_marginTop="328dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="313dp"
        android:layout_height="59dp"
        android:layout_marginTop="156dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Inf"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="224dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/partido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_adultos"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="455dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_ninos"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="420dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inf3"
        android:layout_width="383dp"
        android:layout_height="18dp"
        android:layout_marginTop="548dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Inf3"
        android:textColor="#DC2E2E"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="508dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="Total: Q"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginTop="296dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/liga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="230dp"
        android:layout_height="14dp"
        android:layout_marginTop="460dp"
        android:fontFamily="monospace"
        android:text="@string/adultos"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="220dp"
        android:layout_height="12dp"
        android:layout_marginTop="428dp"
        android:fontFamily="monospace"
        android:text="@string/niños"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="250dp"
        android:layout_height="28dp"
        android:layout_marginTop="372dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Inf2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restar_kids"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="420dp"
        android:background="@android:drawable/screen_background_dark"
        android:gravity="center"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sumar_adults"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="455dp"
        android:background="@android:drawable/screen_background_dark"
        android:gravity="center"
        android:text="+"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sumar_kids"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="420dp"
        android:background="@android:drawable/screen_background_dark"
        android:gravity="center"
        android:text="+"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/restar_adults"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginTop="455dp"
        android:background="@android:drawable/screen_background_dark"
        android:gravity="center"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pagar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="584dp"
        android:background="#000000"
        android:fontFamily="monospace"
        android:text="@string/listo"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
>>>>>>> af855ac270211753ba8d1c080dcc5e6c8b9ecc99

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        tools:layout_editor_absoluteY="489dp" />

    <!-- TODO: Update blank fragment layout -->

</androidx.constraintlayout.widget.ConstraintLayout>